--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,12 @@ keywords = ["octokit", "github"]
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+
+[build-dependencies]
+prettyplease = "0.2"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+schemars = "0.8"
+serde = { version = "1" }
+serde_json = "1"
+syn = "2"
+typify = "0.0.15"
