--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "octokit-rs"
 version = "0.1.1"
 edition = "2021"
 description = "Octokit RS is a lib with the up-to-date Github types"
-authors = ["(Miaxos) Anthony Griffon <anthony@griffon.one>"]
+authors = ["miaxos <anthony@griffon.one>"]
 homepage = "https://swarmd.io"
 repository = "https://github.com/miaxos/octokit-rs"
 documentation = "https://docs.rs/octokit-rs/latest/octokit_rs/"
